# TimeTracker

./: .gitignore  CLAUDE.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts  vitest.setup.ts
.claude/: settings.local.json
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: categories.rs  mod.rs  reports.rs  settings.rs  tracking.rs
src-tauri/src/db/: connection.rs  migrations.rs  mod.rs  models.rs
src-tauri/src/tracking/: detector.rs  mod.rs  recorder.rs
src-tauri/src/tray/: mod.rs
src/__mocks__/: tauri.ts
src/components/dashboard/: CategoryChart.tsx  ProductivityScore.tsx  TopApps.tsx  TrackingControl.tsx
src/components/layout/: AppLayout.tsx  Sidebar.tsx
src/hooks/: useUpdater.ts
src/hooks/__tests__/: useUpdater.test.ts
src/lib/: utils.ts
src/lib/__tests__/: utils.test.ts
src/pages/: Categories.tsx  Dashboard.tsx  Projects.tsx  Reports.tsx  Settings.tsx
src/services/: api.ts
src/stores/: trackingStore.ts
src/stores/__tests__/: trackingStore.test.ts
src/types/: index.ts
