[package]
name = "time-tracker"
version = "0.1.0"
description = "A cross-platform time tracking application"
authors = ["Benjamin"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "time_tracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2.9.5", features = ["tray-icon", "image-png"] }
tauri-plugin-log = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Window detection
x-win = "5.5"

# Idle detection
user-idle = "0.6"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Async runtime
tokio = { version = "1", features = ["sync", "time"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
regex = "1"
log = "0.4"
thiserror = "1"
once_cell = "1"
parking_lot = "0.12"
